# nixos-configuration

./: .sops.yaml  README.md  flake.nix  treefmt.nix
.github/workflows/: check.yml  pages.yml
checks/pre-commit-hooks/: default.nix
docs/: mkdocs.yml
docs/docs/: customization.md  features.md  index.md  resources.md  screenshots.md  secrets.md  tasks.md
homes/x86_64-linux/nagi@vm/: default.nix
homes/x86_64-linux/theobori@brian/: default.nix
homes/x86_64-linux/theobori@laptop/: default.nix
homes/x86_64-linux/theobori@rob/: default.nix
homes/x86_64-linux/theobori@vm/: default.nix
modules/home/user/: default.nix
modules/nixos/networking/: default.nix
modules/nixos/user/: default.nix
overlays/bang-bang/: default.nix
overlays/base16-schemes/: default.nix
overlays/bitwarden/: default.nix
overlays/fast-anime/: default.nix
overlays/nix-converter/: default.nix
overlays/nsearch/: default.nix
overlays/pnpm/: default.nix
overlays/pycharm/: default.nix
overlays/quake-injector/: default.nix
overlays/spark/: default.nix
overlays/taisei/: default.nix
overlays/taterclient-ddnet/: default.nix
overlays/vesktop/: default.nix
overlays/vkquake/: default.nix
shells/default/: default.nix
templates/go/: .gitignore  default.nix  flake.nix  treefmt.nix
templates/latex/: .gitignore  default.nix
templates/python/: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
templates/python/project/: __init__.py
templates/python/tests/: test_is_true.py
templates/xdp-c/: .gitignore  default.nix  flake.nix
(+182 files in other folders)
